Made the work balancer pluggable (#1546)